==> RT-Thread/rt-thread/bsp/n32/libraries/n32_drivers/drv_usartX.c <==
#include <rtdevice.h>
#include <rthw.h>
#include <board.h>
#include "drv_usartX.h"
#define UART_ENABLE_IRQ(n)            NVIC_EnableIRQ((n))
#define UART_DISABLE_IRQ(n)           NVIC_DisableIRQ((n))

static void n32_start_tx(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    USART_ConfigInt(uart->uart_device, USART_INT_TXDE, ENABLE);
}

static void n32_stop_tx(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    USART_ConfigInt(uart->uart_device, USART_INT_TXDE, DISABLE);
}

static rt_bool_t n32_is_dma_txing(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

//    return uart->dmaTxing;  //RT_FALSE;
    return (DMA_GetFlagStatus(uart->dma_tx.dma_flag, uart->dma_tx.dma_module) == SET);
}

static void n32_start_dma_tx(struct rt_serial_device *serial, rt_uint8_t *buf, rt_size_t size)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    // TODO: 启用 DMA 发送
    uart->dma_tx.dma_ch->MADDR = (uint32_t)(buf);
    uart->dma_tx.dma_ch->TXNUM = (uint32_t)(size);
    DMA_EnableChannel(uart->dma_tx.dma_ch, ENABLE);

    uart->dmaTxing = RT_TRUE;
}

static void n32_stop_dma_tx(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    // TODO: 禁用 DMA 发送
    DMA_EnableChannel(uart->dma_tx.dma_ch, DISABLE);
    uart->dmaTxing = RT_FALSE;
}

static void n32_enable_interrupt(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    UART_ENABLE_IRQ(uart->irq);
}

static void n32_disable_interrupt(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    UART_DISABLE_IRQ(uart->irq);
}

static void dma_rx_done_isr(struct rt_serial_device *serial)
{
    struct n32_uart *uart;
    rt_size_t dma_cnt;

    uart = rt_container_of(serial, struct n32_uart, serial);

    dma_cnt = RT_SERIAL_DMA_BUFSZ - DMA_GetCurrDataCounter(uart->dma_rx.dma_ch);

    rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_DMADONE | (dma_cnt << 8));

    DMA_ClearFlag(uart->dma_rx.dma_flag, uart->dma_rx.dma_module);
    DMA_ClrIntPendingBit(uart->dma_rx.dma_flag, uart->dma_rx.dma_module);
}

static void dma_tx_done_isr(struct rt_serial_device *serial)
{
    struct n32_uart *uart;
    rt_size_t dma_cnt;

    uart = rt_container_of(serial, struct n32_uart, serial);

    dma_cnt = DMA_GetCurrDataCounter(uart->dma_tx.dma_ch);

    if (dma_cnt == 0)
    {
        rt_hw_serial_isr(&uart->serial, RT_SERIAL_EVENT_TX_DMADONE);
    }
    DMA_ClrIntPendingBit(uart->dma_tx.dma_flag, uart->dma_rx.dma_module);
}

static void uart_isr(struct rt_serial_device *serial)
{
    struct n32_uart *uart;
#ifdef RT_SERIAL_USING_DMA
    rt_size_t dma_cnt;
#endif

    RT_ASSERT(uart != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    if(USART_GetIntStatus(uart->uart_device, USART_INT_RXDNE) != RESET)
    {
        if(USART_GetFlagStatus(uart->uart_device, USART_FLAG_PEF) == RESET)
        {
            rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        }
        /* clear interrupt */
        USART_ClrIntPendingBit(uart->uart_device, USART_INT_RXDNE);
    }
    if(USART_GetIntStatus(uart->uart_device, USART_INT_TXDE) != RESET)
    {
        if(USART_GetFlagStatus(uart->uart_device, USART_FLAG_PEF) == RESET)
        {
            rt_hw_serial_isr(serial, RT_SERIAL_EVENT_TX_DONE);
        }
        /* clear interrupt */
        USART_ClrIntPendingBit(uart->uart_device, USART_INT_TXDE);
    }

#ifdef RT_SERIAL_USING_DMA
    if(USART_GetIntStatus(uart->uart_device, USART_INT_IDLEF) != RESET)
    {
        /* read a data for clear receive idle interrupt flag */
        USART_ReceiveData(uart->uart_device);

        dma_cnt = RT_SERIAL_DMA_BUFSZ - DMA_GetCurrDataCounter(uart->dma_rx.dma_ch);

        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_DMADONE | (dma_cnt << 8));
    }
#endif
    if (USART_GetFlagStatus(uart->uart_device, USART_FLAG_OREF) == SET)
    {
        n32_uart_getc(serial);
    }
}

static void DMA_RX_Configuration(struct rt_serial_device *serial)
{
    DMA_InitType DMA_InitStructure;
    NVIC_InitType NVIC_InitStructure;
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    /* enable transmit idle interrupt */
    USART_ConfigInt(uart->uart_device, USART_INT_IDLEF, ENABLE);

    /* DMA clock enable */
    RCC_EnableAHBPeriphClk(RCC_AHB_PERIPH_DMA1, ENABLE);
    RCC_EnableAHBPeriphClk(RCC_AHB_PERIPH_DMA2, ENABLE);

    /* rx dma config */
    DMA_InitStructure.PeriphAddr = (uint32_t)&(uart->uart_device->DAT);
    DMA_InitStructure.MemAddr = (uint32_t)(serial->serial_dma_rx);
    DMA_InitStructure.Direction = DMA_DIR_PERIPH_SRC;
    DMA_InitStructure.BufSize = RT_SERIAL_DMA_BUFSZ;
    DMA_InitStructure.PeriphInc = DMA_PERIPH_INC_DISABLE;
    DMA_InitStructure.DMA_MemoryInc = DMA_MEM_INC_ENABLE;
    DMA_InitStructure.PeriphDataSize = DMA_PERIPH_DATA_SIZE_BYTE;
    DMA_InitStructure.MemDataSize = DMA_MemoryDataSize_Byte;
    DMA_InitStructure.CircularMode = DMA_MODE_CIRCULAR;
    DMA_InitStructure.Priority = DMA_PRIORITY_HIGH;
    DMA_InitStructure.Mem2Mem = DMA_M2M_DISABLE;

    DMA_DeInit(uart->dma_rx.dma_ch);
    DMA_Init(uart->dma_rx.dma_ch, &DMA_InitStructure);

    DMA_ClearFlag(uart->dma_rx.dma_flag, uart->dma_rx.dma_module);
    DMA_ConfigInt(uart->dma_rx.dma_ch, DMA_INT_HTX, ENABLE);
    DMA_ConfigInt(uart->dma_rx.dma_ch, DMA_INT_TXC, ENABLE);

    USART_EnableDMA(uart->uart_device, USART_DMAREQ_RX, ENABLE);
    DMA_EnableChannel(uart->dma_rx.dma_ch, ENABLE);

    /* rx dma interrupt config */
    NVIC_InitStructure.NVIC_IRQChannel = uart->dma_rx.dma_irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

static void DMA_TX_Configuration(struct rt_serial_device *serial)
{
    DMA_InitType DMA_InitStructure;
    NVIC_InitType NVIC_InitStructure;
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    /* enable transmit idle interrupt */
//    USART_ConfigInt(uart->uart_device, USART_INT_IDLEF, ENABLE);

    /* DMA clock enable */
    RCC_EnableAHBPeriphClk(RCC_AHB_PERIPH_DMA1, ENABLE);
    RCC_EnableAHBPeriphClk(RCC_AHB_PERIPH_DMA2, ENABLE);

    /* tx dma config */
    DMA_InitStructure.PeriphAddr = (uint32_t)&(uart->uart_device->DAT);
//    DMA_InitStructure.MemAddr = (uint32_t)(serial->serial_dma_tx);
    DMA_InitStructure.Direction = DMA_DIR_PERIPH_DST;
//    DMA_InitStructure.BufSize = serial->config.bufsz;
    DMA_InitStructure.PeriphInc = DMA_PERIPH_INC_DISABLE;
    DMA_InitStructure.DMA_MemoryInc = DMA_MEM_INC_ENABLE;
    DMA_InitStructure.PeriphDataSize = DMA_PERIPH_DATA_SIZE_BYTE;
    DMA_InitStructure.MemDataSize = DMA_MemoryDataSize_Byte;
    DMA_InitStructure.CircularMode = DMA_MODE_NORMAL;
    DMA_InitStructure.Priority = DMA_PRIORITY_HIGH;
    DMA_InitStructure.Mem2Mem = DMA_M2M_DISABLE;

    DMA_DeInit(uart->dma_tx.dma_ch);
    DMA_Init(uart->dma_tx.dma_ch, &DMA_InitStructure);

    DMA_ClearFlag(uart->dma_tx.dma_flag, uart->dma_tx.dma_module);
    DMA_ConfigInt(uart->dma_tx.dma_ch, DMA_INT_TXC, ENABLE);
    USART_EnableDMA(uart->uart_device, USART_DMAREQ_TX, ENABLE);
//    DMA_EnableChannel(uart->dma_tx.dma_ch, ENABLE);

    /* rx dma interrupt config */
    NVIC_InitStructure.NVIC_IRQChannel = uart->dma_tx.dma_irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

int rt_hw_usart_init(void)
{
    struct n32_uart *uart;

#if defined(BSP_USING_UART1)
    uart = &uart1;

    uart->serial.ops = &n32_uart_ops;

    NVIC_Configuration(uart);

    /* register UART1 device */
    rt_hw_serial_register(&uart->serial, "uart1",
                          RT_DEVICE_FLAG_RDWR |
                          RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_INT_TX
#ifdef RT_SERIAL_USING_DMA
                          | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX
#endif
                          , uart);
#endif /* BSP_USING_UART1 */

#if defined(BSP_USING_UART2)
    uart = &uart2;

    uart->serial.ops    = &n32_uart_ops;

    NVIC_Configuration(uart);

    /* register UART2 device */
    rt_hw_serial_register(&uart->serial, "uart2",
                          RT_DEVICE_FLAG_RDWR |
                          RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_INT_TX
#ifdef RT_SERIAL_USING_DMA
                          | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX
#endif
                          , uart);
#endif /* BSP_USING_UART2 */

#if defined(BSP_USING_UART3)
    uart = &uart3;

    uart->serial.ops    = &n32_uart_ops;

    NVIC_Configuration(uart);

    /* register UART3 device */
    rt_hw_serial_register(&uart->serial, "uart3",
                          RT_DEVICE_FLAG_RDWR |
                          RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_INT_TX
#ifdef RT_SERIAL_USING_DMA
                          | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX
#endif
                          , uart);
#endif /* BSP_USING_UART3 */

#if defined(BSP_USING_UART4)
    uart = &uart4;

    uart->serial.ops    = &n32_uart_ops;

    NVIC_Configuration(uart);

    /* register UART4 device */
    rt_hw_serial_register(&uart->serial, "uart4",
                          RT_DEVICE_FLAG_RDWR |
                          RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_INT_TX
#ifdef RT_SERIAL_USING_DMA
                          | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX
#endif
                          , uart);
#endif /* BSP_USING_UART4 */

    return RT_EOK;
}
