==> RT-Thread/rt-thread/bsp/gd32/arm/libraries/gd32_drivers/drv_usartX.c <==
#include <gd32f4xx.h>
#include <drv_usartX.h>
#include <board.h>

static void gd32_start_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);
    usart_interrupt_enable(uart->uart_periph, USART_INT_TBE);
}

static void gd32_stop_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);
    usart_interrupt_disable(uart->uart_periph, USART_INT_TBE);
}

static rt_bool_t gd32_is_dma_txing(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    return uart->dmaTxing;  //RT_FALSE;
}

static void gd32_start_dma_tx(struct rt_serial_device *serial, rt_uint8_t *buf, rt_size_t size)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    // TODO: 启用 DMA 发送
    DMA_CHM0ADDR(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel) = (uint32_t)(buf);
    DMA_CHCNT(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel) = (uint32_t)(size);
    dma_channel_enable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);

    uart->dmaTxing = RT_TRUE;
}

static void gd32_stop_dma_tx(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    // TODO: 禁用 DMA 发送
    dma_channel_disable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);
    uart->dmaTxing = RT_FALSE;
}

static void gd32_enable_interrupt(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    NVIC_EnableIRQ(uart->uart_config.irqn);
}

static void gd32_disable_interrupt(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    NVIC_DisableIRQ(uart->uart_config.irqn);
}

static void dma_rx_done_isr(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;
    rt_size_t dma_cnt;

    uart = rt_container_of(serial, struct gd32_uart, serial);

    dma_cnt = RT_SERIAL_DMA_BUFSZ - DMA_CHCNT(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);

    rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_DMADONE | (dma_cnt << 8));

    dma_interrupt_flag_clear(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_INT_FLAG_HTF);
    dma_interrupt_flag_clear(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_INT_FLAG_FTF);
}

static void dma_tx_done_isr(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;
    rt_size_t dma_cnt;

    uart = rt_container_of(serial, struct gd32_uart, serial);

    dma_cnt = DMA_CHCNT(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);

    if (dma_cnt == 0)
    {
        rt_hw_serial_isr(&uart->serial, RT_SERIAL_EVENT_TX_DMADONE);
    }
    dma_interrupt_flag_clear(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, DMA_INT_FLAG_FTF);
}

static void uart_isr(struct rt_serial_device *serial)
{
    struct gd32_uart *uart;
#ifdef RT_SERIAL_USING_DMA
    rt_size_t dma_cnt;
#endif

    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct gd32_uart, serial);

    /* UART in mode Receiver -------------------------------------------------*/
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RBNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        /* Clear RXNE interrupt flag */
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_RBNE);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RBNE_ORERR) != RESET))
    {
        usart_data_receive(uart->uart_periph);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_TBE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_TX_DONE);
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_TBE);
    }
#ifdef RT_SERIAL_USING_DMA
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_IDLE) != RESET))
    {
        usart_data_receive(uart->uart_periph);
        dma_cnt = RT_SERIAL_DMA_BUFSZ - DMA_CHCNT(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_DMADONE | (dma_cnt << 8));
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_TC) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_TC);
    }
#endif
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_PERR) != RESET))
    {
        usart_data_receive(uart->uart_periph);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_EB) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_EB);
    }
    if ((usart_interrupt_flag_get(uart->uart_periph, USART_INT_FLAG_RT) != RESET))
    {
        usart_interrupt_flag_clear(uart->uart_periph, USART_INT_FLAG_RT);
    }
}

static void DMA_RX_Configuration(struct rt_serial_device *serial)
{
    dma_single_data_parameter_struct dma_init_struct;
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct gd32_uart, serial);

    /* enable DMA1 */
    rcu_periph_clock_enable(RCU_DMA1);

    /* deinitialize DMA channel3(USART0 tx) */
    dma_deinit(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);
    dma_init_struct.direction = DMA_PERIPH_TO_MEMORY;
    dma_init_struct.memory_inc = DMA_MEMORY_INCREASE_ENABLE;
    dma_init_struct.memory0_addr = (uint32_t)(serial->serial_dma_rx);
    dma_init_struct.number = RT_SERIAL_DMA_BUFSZ;
    dma_init_struct.periph_addr = (uint32_t)(uart->uart_periph + 0x04);
    dma_init_struct.periph_inc = DMA_PERIPH_INCREASE_DISABLE;
    dma_init_struct.periph_memory_width = DMA_PERIPH_WIDTH_8BIT;
    dma_init_struct.priority = DMA_PRIORITY_ULTRA_HIGH;
    dma_init_struct.circular_mode = DMA_CIRCULAR_MODE_ENABLE;

    dma_single_data_mode_init(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, &dma_init_struct);
    dma_channel_subperipheral_select(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, uart->dma_rx.dma_subperi);

    dma_interrupt_enable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_HTFIE);
    dma_interrupt_enable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel, DMA_CHXCTL_FTFIE);
    NVIC_SetPriority(uart->dma_rx.dma_irq, 0);
    NVIC_EnableIRQ(uart->dma_rx.dma_irq);
    dma_channel_enable(uart->dma_rx.dma_periph, uart->dma_rx.dma_channel);
    usart_dma_receive_config(uart->uart_periph, USART_DENR_ENABLE);
}

static void DMA_TX_Configuration(struct rt_serial_device *serial)
{
    dma_single_data_parameter_struct dma_init_struct;
    struct gd32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct gd32_uart, serial);

    /* enable DMA1 */
    rcu_periph_clock_enable(RCU_DMA1);
    /* deinitialize DMA channel3(USART0 tx) */
    dma_deinit(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel);
    dma_init_struct.direction = DMA_MEMORY_TO_PERIPH;
    dma_init_struct.memory_inc = DMA_MEMORY_INCREASE_ENABLE;
//    dma_init_struct.memory0_addr = (uint32_t)tx_buffer;
//    dma_init_struct.number = ARRAYNUM(tx_buffer);
    dma_init_struct.periph_addr = (uint32_t)(uart->uart_periph + 0x04);
    dma_init_struct.periph_inc = DMA_PERIPH_INCREASE_DISABLE;
    dma_init_struct.periph_memory_width = DMA_PERIPH_WIDTH_8BIT;
    dma_init_struct.priority = DMA_PRIORITY_ULTRA_HIGH;
    dma_init_struct.circular_mode = DMA_CIRCULAR_MODE_DISABLE;

    dma_single_data_mode_init(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, &dma_init_struct);
    dma_channel_subperipheral_select(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, uart->dma_tx.dma_subperi);

    dma_interrupt_enable(uart->dma_tx.dma_periph, uart->dma_tx.dma_channel, DMA_CHXCTL_FTFIE);
    NVIC_SetPriority(uart->dma_tx.dma_irq, 0);
    NVIC_EnableIRQ(uart->dma_tx.dma_irq);

    usart_interrupt_enable(uart->uart_periph, USART_INT_IDLE);
    usart_interrupt_enable(uart->uart_periph, USART_INT_TC);
    usart_dma_transmit_config(uart->uart_periph, USART_DENT_ENABLE);
}

int rt_hw_usart_init(void)
{
    int i;

    for (i = 0; i < sizeof(uarts) / sizeof(uarts[0]); i++)
    {
        uarts[i].serial.ops    = &gd32_uart_ops;

        /* register UART1 device */
        rt_hw_serial_register(&uarts[i].serial,
                              uarts[i].uart_config.name,
                              RT_DEVICE_FLAG_RDWR | 
                              RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_INT_TX
#ifdef RT_SERIAL_USING_DMA
                            | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX
#endif
                              , RT_NULL);
    }

    return 0;
}
